--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
     </style>
   </head>
   <body
-    class="w-full h-screen font-['Inter'] bg-[#141414] flex justify-center items-center px-8"
+    class="w-full h-screen font-['Inter'] bg-[#141414] flex justify-center items-center px-8 text-[14px]"
   >
     <div
-      class="profile-container w-full max-w-[400px] bg-[#1f1f1f] rounded-2xl flex flex-col items-center p-6 text-white text-center"
+      class="profile-container w-full max-w-[350px] bg-[#1f1f1f] rounded-2xl flex flex-col items-center p-6 text-white text-center"
     >
       <img
         src="/assets/images/avatar-jessica.jpeg"
@@ -65,12 +65,12 @@
       />
       <h1 class="profile-name font-bold text-[22px] mt-4">Jessica Randall</h1>
       <h6 class="text-[#c5f82a] font-bold mt-2 mb-6">London, United Kingdom</h6>
-      <p class="text-[#fff] opacity-50 mb-4">
+      <p class="text-[#fff] opacity-50 mb-6">
         "Front-end developer and avid reader."
       </p>
 
       <!-- buttons -->
-      <div class="w-full flex flex-col gap-4">
+      <div class="w-full flex flex-col gap-4 text-[14px] mt-2">
         <a
           href="https://github.com/abhi1322"
           class="link group bg-[#333333] w-full h-14 rounded-xl font-semibold flex justify-center items-center text-lg cursor-pointer capitalize"
@@ -97,8 +97,7 @@
         </a>
       </div>
 
-      <!-- GitHub Frontend Mentor LinkedIn
-      Twitter Instagram -->
+      
     </div>
 
     <div class="attribution absolute bottom-2 text-white">
