--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       class="profile-container w-full max-w-[350px] bg-[#1f1f1f] rounded-2xl flex flex-col items-center p-6 text-white text-center"
     >
       <img
-        src="/assets/images/avatar-jessica.jpeg"
+        src="./assets/images/avatar-jessica.jpeg"
         alt="profile-img"
         class="profile-img rounded-full w-32"
       />
